--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BassoonTracker - Amiga music tracker - by Steffest</title>
+    <title>BassoonTrackerDesktop - by Steffest, port by denomis</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width user-scalable=no">
     <meta name="author" content="Steffest">
