--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BassoonTrackerDesktop - by Steffest, port by denomis</title>
+    <title>BassoonTrackerDesktop - Amiga music tracker - by Steffest, ported to Electron by denomis</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width user-scalable=no">
     <meta name="author" content="Steffest">
@@ -46,8 +46,8 @@
         }
     </style>
 
-    <script>var buildNumber = "0.4.3-build20230202.1144"; var versionNumber = "0.4.3";</script>
-    <script src="script/bassoontracker-min.js?v0.4.3-build20230202.1144"></script>
+    <script>var buildNumber = "0.4.3-build20231205.1045"; var versionNumber = "0.4.3";</script>
+    <script src="script/bassoontracker-min.js?v0.4.3-build20231205.1045"></script>
 
     <script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
